Layout footerNav finitions

--- a/Positioning_and_floating_elements/index.html
+++ b/Positioning_and_floating_elements/index.html
@@ -878,7 +878,7 @@
         </section>
     </main>
     <footer class="footerSection">
-        <div class="footerTitle">
+<div class="footerTitle uMargin-top-sm  uMargin-bottom-sm">
             <a href="#" class="uUnderline-none">
                 <svg xmlns="http://www.w3.org/2000/svg" class="mainLogo" viewBox="0 0 184 25" fill="#000">
                     <path
@@ -893,9 +893,9 @@
             </a>
         </div>
         <div class="footerNav">
-            <ul>
+            <ul class="uMargin-none">
                 <li>
-                    <h5>NEWS</h5>
+                    <h5 class="uMargin-top-xxxs">NEWS</h5>
                 </li>
                 <li>
                     <a href="#" class="cLink-underline">
@@ -982,9 +982,9 @@
                     </a>
                 </li>
             </ul>
-            <ul>
+            <ul class="uMargin-none">
                 <li>
-                    <h5>OPINION</h5>
+                    <h5 class="uMargin-top-xxxs">OPINION</h5>
                 </li>
                 <li>
                     <a href="#" class="cLink-underline">
@@ -1036,9 +1036,9 @@
                     </a>
                 </li>
             </ul>
-            <ul>
+            <ul class="uMargin-none">
                 <li>
-                    <h5>ARTS</h5>
+                    <h5 class="uMargin-top-xxxs">ARTS</h5>
                 </li>
                 <li>
                     <a href="#" class="cLink-underline">
@@ -1111,9 +1111,9 @@
                     </a>
                 </li>
             </ul>
-            <ul>
+            <ul class="uMargin-none">
                 <li>
-                    <h5>LIVING</h5>
+                    <h5 class="uMargin-top-xxxs">LIVING</h5>
                 </li>
                 <li>
                     <a href="#" class="cLink-underline">
@@ -1200,9 +1200,9 @@
                     </a>
                 </li>
             </ul>
-            <ul>
+            <ul class="uMargin-none">
                 <li>
-                    <h5>MORE</h5>
+                    <h5 class="uMargin-top-xxxs">MORE</h5>
                 </li>
                 <li>
                     <a href="#" class="cLink-underline">
@@ -1289,9 +1289,9 @@
                     </a>
                 </li>
             </ul>
-            <ul>
+            <ul class="uMargin-none suscribeContainer">
                 <li>
-                    <h5>SUBSCRIBE</h5>
+                    <h5 class="uMargin-top-xxxs">SUBSCRIBE</h5>
                 </li>
                 <li>
                     <a href="#" class="cLink-underline">
@@ -1321,30 +1321,31 @@
                         </h4>
                     </a>
                 </li>
+                <li class="suscribeBorder"></li>
                 <li>
                     <a href="#" class="cLink-underline">
-                        <p class="paragraph-xxxs text-gray">
+                        <p class="paragraph-xxxs">
                             Email Newsletters
                         </p>
                     </a>
                 </li>
                 <li>
                     <a href="#" class="cLink-underline">
-                        <p class="paragraph-xxxs text-gray">
+                        <p class="paragraph-xxxs">
                             Corporate Subscriptions
                         </p>
                     </a>
                 </li>
                 <li>
                     <a href="#" class="cLink-underline">
-                        <p class="paragraph-xxxs text-gray">
+                        <p class="paragraph-xxxs">
                             Education Rate
                         </p>
                     </a>
                 </li>
                 <li>
                     <a href="#" class="cLink-underline">
-                        <p class="paragraph-xxxs text-gray">
+                        <p class="paragraph-xxxs">
                             Mobile Applications
                         </p>
                     </a>
