--- a/Positioning_and_floating_elements/index.html
+++ b/Positioning_and_floating_elements/index.html
@@ -1352,79 +1352,79 @@
                 </li>
             </ul>
         </div>
-        <div>
-            <ul class="uBox-flex">
-                <li>
+        <div class="mentionsContainer uMargin-top-sm">
+            <ul class="uBox-flex uMargin-none">
+                <li class="uPadding-xxs">
                     <a href="#" class="cLink-underline">
                         <p class="paragraph-xxxs text-gray">
                             © 2019 The New York Times Company
                         </p>
                     </a>
                 </li>
-                <li>
+                <li class="uPadding-xxs">
                     <a href="#" class="cLink-underline">
                         <p class="paragraph-xxxs text-gray">
                             Contact Us
                         </p>
                     </a>
                 </li>
-                <li>
+                <li class="uPadding-xxs">
                     <a href="#" class="cLink-underline">
                         <p class="paragraph-xxxs text-gray">
                             Work with us
                         </p>
                     </a>
                 </li>
-                <li>
+                <li class="uPadding-xxs">
                     <a href="#" class="cLink-underline">
                         <p class="paragraph-xxxs text-gray">
                             Advertise
                         </p>
                     </a>
                 </li>
-                <li>
+                <li class="uPadding-xxs">
                     <a href="#" class="cLink-underline">
                         <p class="paragraph-xxxs text-gray">
                             Your Ad Choices
                         </p>
                     </a>
                 </li>
-                <li>
+                <li class="uPadding-xxs">
                     <a href="#" class="cLink-underline">
                         <p class="paragraph-xxxs text-gray">
                             Privacy
                         </p>
                     </a>
                 </li>
-                <li>
+                <li class="uPadding-xxs">
                     <a href="#" class="cLink-underline">
                         <p class="paragraph-xxxs text-gray">
                             Terms of Service
                         </p>
                     </a>
                 </li>
-                <li>
+                <li class="uPadding-xxs">
                     <a href="#" class="cLink-underline">
                         <p class="paragraph-xxxs text-gray">
                             Terms of Sale
                         </p>
                     </a>
                 </li>
-                <li>
+                <li class="uPadding-xxs">
                     <a href="#" class="cLink-underline">
                         <p class="paragraph-xxxs text-gray">
                             Site Map
                         </p>
                     </a>
                 </li>
-                <li>
+                <li class="uPadding-xxs">
                     <a href="#" class="cLink-underline">
                         <p class="paragraph-xxxs text-gray">
                             Help
                         </p>
                     </a>
                 </li>
-                <li>
+                <li class="uPadding-xxs">
                     <a href="#" class="cLink-underline">
                         <p class="paragraph-xxxs text-gray">
                             Subscriptions
