--- a/Design_teardown/index.html
+++ b/Design_teardown/index.html
@@ -5,19 +5,20 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Design Tearsdown</title>
+    <link rel="stylesheet" type="text/css" media="screen" href="css/style.css"/>
 </head>
 <body>
     <header>
         <nav class="navContainer">
-            <ul>
-                <li class="navItem">
+            <ul class="uBox-flex uMargin-none uPadding-none">
+                <li class="navItem important-10">
                     <div class="logoContainer">
                         <a href="">
                             <img src="" alt="" class="logoItem">
                         </a>
                     </div>
                 </li>
-                <li class="navItem">
+                <li class="navItem important-10">
                     <a href="">
                         <figure>
                             <img src="" alt="">
@@ -30,7 +31,7 @@
                         </figure>
                     </a>
                 </li>
-                <li class="navItem">
+                <li class="navItem important-10">
                     <a href="">
                         <figure>
                             <img src="" alt="">
@@ -43,7 +44,7 @@
                         </figure>
                     </a>
                 </li>
-                <li class="navItem">
+                <li class="navItem important-10">
                     <a href="">
                         <figure>
                             <img src="" alt="">
@@ -56,7 +57,7 @@
                         </figure>
                     </a>
                 </li>
-                <li class="navItem">
+                <li class="navItem important-10">
                     <a href="">
                         <figure>
                             <img src="" alt="">
@@ -69,7 +70,7 @@
                         </figure>
                     </a>
                 </li>
-                <li class="navItem">
+                <li class="navItem important-10">
                     <a href="">
                         <figure>
                             <img src="" alt="">
@@ -82,7 +83,7 @@
                         </figure>
                     </a>
                 </li>
-                <li class="navItem">
+                <li class="navItem important-10">
                     <button>
                         <p>
 
