--- a/Design_teardown/index.html
+++ b/Design_teardown/index.html
@@ -12,83 +12,105 @@
         <nav class="navContainer">
             <ul class="uBox-flex uMargin-none uPadding-none">
                 <li class="navItem uPadding-xs">
-                    <div class="logoContainer important-50">
-                        <a href="">
-                            <img src="" alt="" class="logoItem">
+                    <div class="logoContainer important-30">
+                        <a class="logoImg" href="">
+                            <img class="importantImg-30" src="" alt="" class="logoItem">
                         </a>
                     </div>
                 </li>
                 <li class="navItem uPadding-xs">
                     <a class="important-10" href="">
-                        <figure>
-                            <img src="" alt="">
-                            <figcaption>
-                                <h3></h3>
-                                <p>
-
-                                </p>
+                        <figure class="uBox-flex column-centered">
+                            <div class="navImg">
+                                <img class="importantImg-10" src="" alt="">
+                            </div>
+                            <figcaption class="uBox-flex column-centered">
+                                <div class="navTitle">
+                                    <h3 class="importantText-20 uMarginTop-xs uMarginBottom-xs"></h3>
+                                </div>
+                                <div class="navText">
+                                    <p class="importantText-20 uMarginTop-sm"></p>
+                                </div>
                             </figcaption>
                         </figure>
                     </a>
                 </li>
                 <li class="navItem uPadding-xs">
                     <a class="important-10" href="">
-                        <figure>
-                            <img src="" alt="">
-                            <figcaption>
-                                <h3></h3>
-                                <p>
-
-                                </p>
+                        <figure class="uBox-flex column-centered">
+                            <div class="navImg">
+                                <img class="importantImg-10" src="" alt="">
+                            </div>
+                            <figcaption class="uBox-flex column-centered">
+                                <div class="navTitle">
+                                    <h3 class="importantText-20 uMarginTop-xs uMarginBottom-xs"></h3>
+                                </div>
+                                <div class="navText">
+                                    <p class="importantText-20 uMarginTop-sm"></p>
+                                </div>
                             </figcaption>
                         </figure>
                     </a>
                 </li>
                 <li class="navItem uPadding-xs">
                     <a class="important-10" href="">
-                        <figure>
-                            <img src="" alt="">
-                            <figcaption>
-                                <h3></h3>
-                                <p>
-
-                                </p>
+                        <figure class="uBox-flex column-centered">
+                            <div class="navImg">
+                                <img class="importantImg-10" src="" alt="">
+                            </div>
+                            <figcaption class="uBox-flex column-centered">
+                                <div class="navTitle">
+                                    <h3 class="importantText-20 uMarginTop-xs uMarginBottom-xs"></h3>
+                                </div>
+                                <div class="navText">
+                                    <p class="importantText-20 uMarginTop-sm"></p>
+                                </div>
                             </figcaption>
                         </figure>
                     </a>
                 </li>
                 <li class="navItem uPadding-xs">
                     <a class="important-10" href="">
-                        <figure>
-                            <img src="" alt="">
-                            <figcaption>
-                                <h3></h3>
-                                <p>
-
-                                </p>
+                        <figure class="uBox-flex column-centered">
+                            <div class="navImg">
+                                <img class="importantImg-10" src="" alt="">
+                            </div>
+                            <figcaption class="uBox-flex column-centered">
+                                <div class="navTitle">
+                                    <h3 class="importantText-20 uMarginTop-xs uMarginBottom-xs"></h3>
+                                </div>
+                                <div class="navText">
+                                    <p class="importantText-20 uMarginTop-sm"></p>
+                                </div>
                             </figcaption>
                         </figure>
                     </a>
                 </li>
                 <li class="navItem uPadding-xs">
                     <a class="important-10" href="">
-                        <figure>
-                            <img src="" alt="">
-                            <figcaption>
-                                <h3></h3>
-                                <p>
-
-                                </p>
+                        <figure class="uBox-flex column-centered">
+                            <div class="navImg">
+                                <img class="importantImg-10" src="" alt="">
+                            </div>
+                            <figcaption class="uBox-flex column-centered">
+                                <div class="navTitle">
+                                    <h3 class="importantText-20 uMarginTop-xs uMarginBottom-xs"></h3>
+                                </div>
+                                <div class="navText">
+                                    <p class="importantText-20 uMarginTop-sm"></p>
+                                </div>
                             </figcaption>
                         </figure>
                     </a>
                 </li>
                 <li class="navItem uPadding-xs">
-                    <button class="important-20">
-                        <p>
-
-                        </p>
-                    </button>
+                    <div class="important-20 uBox-flex centered">
+                        <button class="block-xxs">
+                            <p class="importantText-10 uMargin-none">
+    
+                            </p>
+                        </button>
+                    </div>
                 </li>
             </ul>
         </nav>
@@ -96,16 +118,16 @@
     <section class="lastArticleContainer uBox-flex">
         <div class="lastArticleTitle uBox-flex centered">
             <div class="blockText-xl">
-                    <h1 class="important-40"></h1>
+                    <h1 class="importantText-50"></h1>
             </div>
         </div>
         <div class="changeColorContainer block-xs">
-            <a class="important-10" href="">
-                <div>
-                    <img src="" alt="">
+            <a class="important-10 uBox-flex centered" href="">
+                <div class="changeColorImg">
+                    <img class="importantImg-10" src="" alt="">
                 </div>
-                <div>
-                    <p>
+                <div class="changeColorText">
+                    <p class="importantText-20 uMargin-none">
 
                     </p>
                 </div>
