--- a/Responsive_design/responsive_design.html
+++ b/Responsive_design/responsive_design.html
@@ -12,24 +12,34 @@
     <div>
         <nav>
             <div class="nav-logo">
-
+                <img src="" alt="">
             </div>
             <div class="nav-main" role="navigation">
                 <ul>
-                    <li>
+                    <li class="search-icon">
                         <a href="#">
                             <i class="fas fa-search"></i>
                         </a>
                     </li>
-                    <li>
-
+                    <li class="nav-mobile-toggle">
+                        <span></span>
+                        <span></span>
+                        <span></span>
                     </li>
                 </ul>
             </div>
         </nav>
         <main>
             <section>
+                <div>
 
+                </div>
+                <div>
+                    
+                </div>
+                <div>
+                    
+                </div>
             </section>
             <div>
                 <section>
